--- a/work.html
+++ b/work.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Check out Verena's project here and find out about her code writing.">
     <title>Verena's projects - find out more about her coding</title>
-    <link rel="stylesheet" href="src/style.css">
+
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script> 
 </head>
 <body>
@@ -38,10 +41,10 @@
 
 <div class="page-container">
 
-<h1 class="text-start mt-5 mb-5"><i class="fa-solid fa-code"></i> Check out my projects</h1>
+<h1 class="mb-4"><i class="fa-solid fa-code"></i> Check out my projects</h1>
 
 <div class="row">
-<div class="col-md-4">
+<div class="col-lg-4">
   <div class="project-container text-center">
     <div class="project-img-container"><img src="/images/weather-app.png" alt="Weather Project Photo" class="project-img-custom" /></div>
     <hr />
@@ -53,7 +56,7 @@
   </div>
 </div>
 </div>
-<div class="col-md-4">
+<div class="col-lg-4">
   <div class="project-container text-center">
     <div class="project-img-container"><img src="/images/world-clock.png" alt="Weather Project Photo" class="project-img-custom" /></div>
     <hr />
@@ -65,7 +68,7 @@
   </div>
 </div>
 </div>
-<div class="col-md-4">
+<div class="col-lg-4">
   <div class="project-container text-center">
     <div class="project-img-container"><img src="/images/AI-definitions-generator.png" alt="Weather Project Photo" class="project-img-custom"/></div>
     <hr />
@@ -79,7 +82,7 @@
 
 </div>
 
-<div class="col-md-4">
+<div class="col-lg-4">
   <div class="project-container text-center">
     <div class="project-img-container"><img src="/images/yoga-website.png" alt="Weather Project Photo" class="project-img-custom" /></div>
     <hr />
